--- a/technovation/Fall2022/news.html
+++ b/technovation/Fall2022/news.html
@@ -283,37 +283,37 @@
                 </div>
             </div>
             <p>
-                Next, we jumped into our coding lesson for the week. This week students learned how to change the color of Tracy's pen with the color pen and fill in the shapes they had drawn with the begin_fill and end_fill commands. Students also learned how to increase the trail Tracy leaves with the pensize command, reposition Tracy with the setposition command, and change the speed Tracy draws at with the speed command. 
+                Next, we jumped into our coding lesson for the week. 
             </p>
             <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
                 <div class="row">
                     <div class="col-md-6" align="middle">
-                        <img class="shadow-lg" src="assets/img/week2/leftright.png" width=90%>
+                        <img class="shadow-lg" src="assets/img/week2/technoday201.png" width=90%>
                     </div>
                     <div class="col-md-6" align="middle">
-                        <img class="shadow-lg" src="assets/img/week2/square.png" width=90%>
+                        <img class="shadow-lg" src="assets/img/week2/technoday202.png" width=90%>
                     </div>
                 </div>
                 <br>
                 <div class="row">
-                    <p><i>Once students learned how to tell Tracy to turn left and right, they were able to instruct Tracy to draw a square!</i></p>
+                    <p><i>Once students learned how to tell Tracy to change colors, they were able to change the color of the trail Tracy leaves. </i></p>
                 </div>
             </div>
             <p>
-                We followed this exercise with an introduction to loops, the programming structure we mentioned earlier which tells a computer to repeat a set of instructions over, and over, and over, and over, ..., and over. As students learned, loops bring two major advantages: they shorten our code, and make it easier to alter our code later on!
+                After students learned how to change the color of Tracy's pen with the color pen, students learned how to fill in the shapes they had drawn with the begin_fill and end_fill commands. Students also learned how to increase the trail Tracy leaves with the pensize command, reposition Tracy with the setposition command, and change the speed Tracy draws at with the speed command. 
             </p>
             <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
                 <div class="row">
                     <div class="col-md-6" align="middle">
-                        <img class="shadow-lg" src="assets/img/week2/loop1.png" width=90%>
+                        <img class="shadow-lg" src="assets/img/week2/technoday203.png" width=90%>
                     </div>
                     <div class="col-md-6" align="middle">
-                        <img class="shadow-lg" src="assets/img/week2/loop2.png" width=90%>
+                        <img class="shadow-lg" src="assets/img/week2/technoday204.png" width=90%>
                     </div>
                 </div>
                 <br>
                 <div class="row">
-                    <p><i>Going in circles isn't always a bad thing... that's exactly what loops are designed to do!</i></p>
+                    <p><i>Students learned how to tell Tracy to increase the pensize and fill in shapes, they were able to keep track of the thickness of the shapes and trails they made!</i></p>
                 </div>
             </div>
             <p>
@@ -322,10 +322,10 @@
             <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
                 <div class="row">
                     <div class="col-md-6" align="middle">
-                        <img class="shadow-lg" src="assets/img/week2/setposition.png" width=90%>
+                        <img class="shadow-lg" src="assets/img/week2/technoday205.png" width=90%>
                     </div>
                     <div class="col-md-6" align="middle">
-                        <img class="shadow-lg" src="assets/img/week2/speed.png" width=90%>
+                        <img class="shadow-lg" src="assets/img/week2/technoday206.png" width=90%>
                     </div>
                 </div>
                 <br>
@@ -342,7 +342,7 @@
 
             <h4 class="text-center">Mentor Spotlight</h4>
             <p>
-                Technovation is led, organized, and run by MSU students under the guidance of advisors from MSU and Ford.&mdash;this week, we'd like to introduce mentors Sophia Wicks, Jose Hernández, and Sneha Sarkar!
+                Technovation is led, organized, and run by MSU students under the guidance of advisors from MSU and Ford.&mdash;this week, we'd like to introduce mentors Sophia Wicks, Jasmine Richardson, and Sneha Sarkar!
             </p>
 
             <!------------------------------------------>
@@ -352,12 +352,12 @@
                     <div class="col-md-4" align="middle"> <!-- Sophia -->
                         <img class="shadow-lg" src="assets/img/photos/AnnaClark750x1000.jpg" width=70%>
                         <br><br>
-                        <p><i>Anna Clark (Detroit Mentor)</i></p>
+                        <p><i>Sophia Wick (Virtual White Cohort Mentor)</i></p>
                     </div>
-                    <div class="col-md-4" align="middle"> <!-- Jose -->
+                    <div class="col-md-4" align="middle"> <!-- Jasmine -->
                         <img class="shadow-lg" src="assets/img/photos/JoseNew750x1000.jpg" width=70%>
                         <br><br>
-                        <p><i>Jose Hernández (Lansing Mentor)</i></p>
+                        <p><i>Jasmine Richardson (Virtual White Cohort Mentor)</i></p>
                     </div>
                     <div class="col-md-4" align="middle"> <!-- Sneha -->
                         <img class="shadow-lg" src="assets/img/photos/SnehaSarkar750x1000_72R.jpeg" width=70%>
@@ -366,49 +366,41 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4" align="left"> <!-- Anna -->
+                    <div class="col-md-4" align="left"> <!-- Sophia -->
                         <p>
                             <b>What are you studying?</b><br>
-                            I'm a second-year student majoring in Mathematics and Computational Data Science!
+                            I'm a first-year studying Computer Science! 
                         </p>
                         <p>
                             <b>How did you become interested in computer science?</b><br>
-                            I became interested in computer science through my robotics team!
-                        </p>
+                            I first became interested when I joined a coding club in middle school!                        </p>
                         <p>
                             <b>What's something cool you've done with computer science?</b><br>
-                            I've coded a game of solitaire in Python!
-                        </p>
+                            I made a piece of art using only code.                        </p>
                         <p>
                             <b>What are you hoping to do with computer science in the future?</b><br>
-                            I hope to teach others!
-                        </p>
+                            I hope to pursue a career in coding.                        </p>
                         <p>
                             <b>What advice do you have for our students?</b><br>
-                            Practice makes perfect; don't give up quickly!
-                        </p>
+                            Take advantage of as many opportunities ad you can - they can lead you to great places!                         </p>
                     </div>
-                    <div class="col-md-4" align="left"> <!-- Jose -->
+                    <div class="col-md-4" align="left"> <!-- Jasmine -->
                         <p>
                             <b>What are you studying?</b><br>
-                            I'm a PhD student with a dual concentration in Computer Science and Ecology, Evolution, & Behavior!
+                            I'm a four year student majoring in Computer Science And Engineering and Minoring in IT
                         </p>
                         <p>
                             <b>How did you become interested in computer science?</b><br>
-                            I took a quiz in middle school to discover potential majors and got computer science!
-                        </p>
+                            I took one class in college that involved coding and I fell in love.                        </p>
                         <p>
                             <b>What's something cool you've done with computer science?</b><br>
-                            I used code to create an app to play tag!
-                        </p>
+                            I coded the Pokémon card game for a class project that worked just like it does on a regular video game it was fun and very cool.                        </p>
                         <p>
                             <b>What are you hoping to do with computer science in the future?</b><br>
-                            In the future, I hope to use code to conduct research on different topics in machine learning!
-                        </p>
+                            I hope to work for a company that I can make a big impact on with my coding skills.                        </p>
                         <p>
                             <b>What advice do you have for our students?</b><br>
-                            Remember to make time to do things that make you happy!
-                        </p>
+                            Even when life gets hard get up and keep going                        </p>
                     </div>
                     <div class="col-md-4" align="left"> <!-- Sneha -->
                         <p>
