--- a/technovation/Fall2022/contact.html
+++ b/technovation/Fall2022/contact.html
@@ -483,11 +483,11 @@
 
                                     <div class="col-md-3"> <!-- Jasmine -->
                                               <div class="team-member-box text-center">
-                                                  <img src="" class="img-responsive center-block" alt="Jasmine">
+                                                  <img src="assets/img/photos/ABAA9029-A124-4DFE-8921-B8C767D81662.jpeg" class="img-responsive center-block" alt="Jasmine">
                                                   <div class="team-member-description">
                                                       <div class="team-member-about">
                                                           <h4>Jasmine</h4>
-                                                          <p>Junior<br>Computer Science</p>
+                                                          <p>Senior<br>Computer Science</p>
                                                       </div> <!-- end of /.team-member-about -->
 
                                                       <div class="team-member-social">
@@ -523,7 +523,7 @@
 
                                     <div class="col-md-3"> <!-- Sophia -->
                                               <div class="team-member-box text-center">
-                                                  <img src="" class="img-responsive center-block" alt="Photo of Sophia">
+                                                  <img src="assets/img/photos/thumbnail_image0.jpg" class="img-responsive center-block" alt="Photo of Sophia">
                                                   <div class="team-member-description">
                                                       <div class="team-member-about">
                                                           <h4>Sophia</h4>
