--- a/technovation/Fall2022/news.html
+++ b/technovation/Fall2022/news.html
@@ -350,12 +350,12 @@
             <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
                 <div class="row">
                     <div class="col-md-4" align="middle"> <!-- Sophia -->
-                        <img class="shadow-lg" src="assets/img/photos/AnnaClark750x1000.jpg" width=70%>
+                        <img class="shadow-lg" src="assets/img/photos/thumbnail_image0.jpg" width=70%>
                         <br><br>
                         <p><i>Sophia Wick (Virtual White Cohort Mentor)</i></p>
                     </div>
                     <div class="col-md-4" align="middle"> <!-- Jasmine -->
-                        <img class="shadow-lg" src="assets/img/photos/JoseNew750x1000.jpg" width=70%>
+                        <img class="shadow-lg" src="assets/img/photos/ABAA9029-A124-4DFE-8921-B8C767D81662.jpeg" width=70%>
                         <br><br>
                         <p><i>Jasmine Richardson (Virtual White Cohort Mentor)</i></p>
                     </div>
