--- a/technovation/Fall2022/contact.html
+++ b/technovation/Fall2022/contact.html
@@ -328,7 +328,7 @@
 
                                   <div class="col-md-3"> <!-- Sammy -->
                                       <div class="team-member-box text-center">
-                                          <img src="" class="img-responsive center-block" alt="Photo of Sammy">
+                                          <img src="assets/img/photos/sammyhead.jpg" class="img-responsive center-block" alt="Photo of Sammy">
                                           <div class="team-member-description">
                                               <div class="team-member-about">
                                                   <h4>Sammy</h4>
