--- a/technovation/Fall2022/news.html
+++ b/technovation/Fall2022/news.html
@@ -269,7 +269,7 @@
                 Students kicked off this week by getting to know each other and their mentors with a name-sharing icebreaker. Students got the chance to introduce themselves to some of the mentors and classmates while simultaneously trying to remember everyone else's name in their group.
             </p>
             <p>
-                After the students got to know each other and their mentors, Saturday's lesson began with an uplifting spotlight video from Khan Academy. Introducing the definition of a growth mindset and how it differs from a fixed mindset, the spotlight underscored the importance of bringing a growth mindset to Technovation every week. Learning to code is difficult, but the challenges we overcome as we navigate this learning process will ultimately make us stronger&mdash;we simply need to change the way we see failure! If we view it as an opportunity for improvement instead of a setback, we'll go far&mdash;if we're feeling down, we simply need to turn our frown upside-down and remember that all experiences are learning experiences!
+                After the icebreaker, Saturday's lesson began with an uplifting spotlight video from Khan Academy. Introducing the definition of a growth mindset and how it differs from a fixed mindset, the spotlight underscored the importance of bringing a growth mindset to Technovation every week. Learning to code is difficult, but the challenges we overcome as we navigate this learning process will ultimately make us stronger&mdash;we simply need to change the way we see failure! If we view it as an opportunity for improvement instead of a setback, we'll go far&mdash;if we're feeling down, we simply need to turn our frown upside-down and remember that all experiences are learning experiences!
             </p>
             <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
                 <div class="row">
@@ -300,7 +300,7 @@
                 </div>
             </div>
             <p>
-                After students learned how to change the color of Tracy's pen with the color pen, students learned how to fill in the shapes they had drawn with the begin_fill and end_fill commands. Students also learned how to increase the trail Tracy leaves with the pensize command, reposition Tracy with the setposition command, and change the speed Tracy draws at with the speed command. 
+                After students learned how to change the color of Tracy's pen with the color command, students learned how to fill in the shapes they had drawn with the begin_fill and end_fill commands. Students also learned how to increase the thickness of trail Tracy leaves with the pensize command.
             </p>
             <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
                 <div class="row">
@@ -317,7 +317,7 @@
                 </div>
             </div>
             <p>
-                Finally, we learned how to use the setposition and speed commands to fine-tune Tracy's behavior: setposition allows Tracy to jump around across our screen, while speed allows Tracy to move faster or slower! Ask your student to show you these commands in action&mdash;they're pretty cool!
+                Finally, we learned how to use the setposition and speed commands to fine-tune Tracy's behavior: setposition allows Tracy to move to specific positions on the screen, while speed allows Tracy to move faster or slower! Ask your student to show you these commands in action&mdash;they're pretty cool!
             </p>
             <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
                 <div class="row">
@@ -342,7 +342,7 @@
 
             <h4 class="text-center">Mentor Spotlight</h4>
             <p>
-                Technovation is led, organized, and run by MSU students under the guidance of advisors from MSU and Ford.&mdash;this week, we'd like to introduce mentors Sophia Wicks, Jasmine Richardson, and Sneha Sarkar!
+                Technovation is led, organized, and run by MSU students under the guidance of advisors from MSU and Ford. This week, we'd like to introduce three mentors in our White Cohort, Sophia Wicks, Jasmine Richardson, and Ishita Kokil!
             </p>
 
             <!------------------------------------------>
@@ -359,10 +359,10 @@
                         <br><br>
                         <p><i>Jasmine Richardson (Virtual White Cohort Mentor)</i></p>
                     </div>
-                    <div class="col-md-4" align="middle"> <!-- Sneha -->
-                        <img class="shadow-lg" src="assets/img/photos/SnehaSarkar750x1000_72R.jpeg" width=70%>
+                    <div class="col-md-4" align="middle"> <!-- Ishita -->
+                        <img class="shadow-lg" src="assets/img/photos/IshitaKokil.png" width=70%>
                         <br><br>
-                        <p><i>Sneha Sarkar (All Michigan Mentor)</i></p>
+                        <p><i>Ishita Kokil (Lead White Cohort Michigan Mentor)</i></p>
                     </div>
                 </div>
                 <div class="row">
@@ -402,22 +402,22 @@
                             <b>What advice do you have for our students?</b><br>
                             Even when life gets hard get up and keep going                        </p>
                     </div>
-                    <div class="col-md-4" align="left"> <!-- Sneha -->
+                    <div class="col-md-4" align="left"> <!-- Ishita -->
                         <p>
                             <b>What are you studying?</b><br>
-                            I'm a fourth-year student majoring in Computer Science with a minor in Graphic Design!
+                            I'm a third-year student majoring in Computer Science!
                         </p>
                         <p>
                             <b>How did you become interested in computer science?</b><br>
-                            I wanted to become an animator, which led me to computer science!
+                            I became interested after my first coding class.
                         </p>
                         <p>
                             <b>What's something cool you've done with computer science?</b><br>
-                            I am a part of a research group where we make use of robots as caregivers to dementia patients!
+                            I am a ULA for a Matrix Algebra class with Computational Applications 
                         </p>
                         <p>
                             <b>What are you hoping to do with computer science in the future?</b><br>
-                            I am hoping to use computer science to build assistive technology and be part of research groups that do the same. 
+                            I am hoping to use computer science to develop projects in the future. 
                         </p>
                         <p>
                             <b>What advice do you have for our students?</b><br>
