--- a/technovation/Fall2022/news.html
+++ b/technovation/Fall2022/news.html
@@ -405,24 +405,19 @@
                     <div class="col-md-4" align="left"> <!-- Ishita -->
                         <p>
                             <b>What are you studying?</b><br>
-                            I'm a third-year student majoring in Computer Science!
-                        </p>
+                            Fourth year double major in computer science and data science.                        </p>
                         <p>
                             <b>How did you become interested in computer science?</b><br>
-                            I became interested after my first coding class.
-                        </p>
+                            My mom, being a professor teaching Computer Science, was my greatest inspiration growing up and watching her teach programming, made me interested in the same field.                         </p>
                         <p>
                             <b>What's something cool you've done with computer science?</b><br>
-                            I am a ULA for a Matrix Algebra class with Computational Applications 
-                        </p>
+                            Creating a classification model that identified the different types of stars in the universe was one of the most interesting projects I have done.                         </p>
                         <p>
                             <b>What are you hoping to do with computer science in the future?</b><br>
-                            I am hoping to use computer science to develop projects in the future. 
-                        </p>
+                            I have been looking into building more Artificial Intelligence and Machine Learning models and also working in the industry!                        </p>
                         <p>
                             <b>What advice do you have for our students?</b><br>
-                            Challenge yourself one step at a time!
-                        </p>
+                            Code can look intimidating sometimes but trust me, it is way easier than it looks!                        </p>
                     </div>
                 </div><br>
             </div>
