--- a/technovation/Fall2022/news.html
+++ b/technovation/Fall2022/news.html
@@ -405,7 +405,7 @@
                     <div class="col-md-4" align="left"> <!-- Ishita -->
                         <p>
                             <b>What are you studying?</b><br>
-                            Fourth year double major in computer science and data science.                        </p>
+                            Third year double major in computer science and data science.                        </p>
                         <p>
                             <b>How did you become interested in computer science?</b><br>
                             My mom, being a professor teaching Computer Science, was my greatest inspiration growing up and watching her teach programming, made me interested in the same field.                         </p>
