--- a/technovation/Fall2022/contact.html
+++ b/technovation/Fall2022/contact.html
@@ -235,7 +235,7 @@
 
                                     <div class="col-md-3"> <!-- Ashley -->
                                         <div class="team-member-box text-center">
-                                            <img src="" class="img-responsive center-block" alt="Photo of Ashley">
+                                            <img src="assets/img/photos/ashley.jfif" class="img-responsive center-block" alt="Photo of Ashley">
                                             <div class="team-member-description">
                                                 <div class="team-member-about">
                                                     <h4>Ashley</h4>
@@ -310,7 +310,7 @@
 
                                   <div class="col-md-3"> <!-- Jisha -->
                                           <div class="team-member-box text-center">
-                                              <img src="" class="img-responsive center-block" alt="Photo of Jisha">
+                                              <img src="assets/img/photos/JishaGoyal.jpg" class="img-responsive center-block" alt="Photo of Jisha">
                                               <div class="team-member-description">
                                                   <div class="team-member-about">
                                                       <h4>Jisha</h4>
@@ -349,7 +349,7 @@
 
                                     <div class="col-md-3"> <!-- Lemuel -->
                                           <div class="team-member-box text-center">
-                                              <img src="" class="img-responsive center-block" alt="Photo of Lemuel">
+                                              <img src="assets/img/photos/Lemuel_Mensah.jpeg" class="img-responsive center-block" alt="Photo of Lemuel">
                                               <div class="team-member-description">
                                                   <div class="team-member-about">
                                                       <h4>Lemuel</h4>
@@ -405,7 +405,7 @@
 
                                     <div class="col-md-3"> <!-- Thuy -->
                                               <div class="team-member-box text-center">
-                                                  <img src="" class="img-responsive center-block" alt="Thuy">
+                                                  <img src="assets/img/photos/Thuy_Nguyen.jpg" class="img-responsive center-block" alt="Thuy">
                                                   <div class="team-member-description">
                                                       <div class="team-member-about">
                                                           <h4>Thuy</h4>
@@ -427,7 +427,7 @@
 
                                     <div class="col-md-3"> <!-- Sania -->
                                           <div class="team-member-box text-center">
-                                              <img src="" class="img-responsive center-block" alt="Photo of Sania">
+                                              <img src="assets/img/photos/sania.jfif" class="img-responsive center-block" alt="Photo of Sania">
                                               <div class="team-member-description">
                                                   <div class="team-member-about">
                                                       <h4>Sania</h4>
@@ -445,7 +445,7 @@
 
                                     <div class="col-md-3"> <!-- Christina -->
                                               <div class="team-member-box text-center">
-                                                  <img src="" class="img-responsive center-block" alt="Photo of Christina">
+                                                  <img src="assets/img/photos/christina.jfif" class="img-responsive center-block" alt="Photo of Christina">
                                                   <div class="team-member-description">
                                                       <div class="team-member-about">
                                                           <h4>Christina</h4>
@@ -505,7 +505,7 @@
 
                                     <div class="col-md-3"> <!-- Serena -->
                                           <div class="team-member-box text-center">
-                                              <img src="" class="img-responsive center-block" alt="Photo of Serena">
+                                              <img src="assets/img/photos/Serena_Brown.jpg" class="img-responsive center-block" alt="Photo of Serena">
                                               <div class="team-member-description">
                                                   <div class="team-member-about">
                                                       <h4>Serena</h4>
