fix footer of current, misaligned tags in news

--- a/technovation/Fall2022/current.html
+++ b/technovation/Fall2022/current.html
@@ -26,7 +26,7 @@
     </head>
 
     <body id="about">
-        <div id="clubs-page">
+        <div id="current-club-page">
 
 
           <!-- site-navigation start -->
@@ -211,7 +211,7 @@
             <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
                 <div class="row">
                     <div class="col-md-12" align="middle">
-                        <img src="https://www.gannett-cdn.com/presto/2020/04/22/PLSJ/869cf6c2-86f7-41dc-b287-b20c30f05dc0-200421_covid_sparty_mask_036a.JPG" width="80%">
+                        <img src="https://scontent-sea1-1.xx.fbcdn.net/v/t31.18172-8/14711040_10154171402513020_3827900849559807804_o.jpg?_nc_cat=103&ccb=1-7&_nc_sid=9267fe&_nc_ohc=iy8iY9aPdVsAX-TqBY1&_nc_ht=scontent-sea1-1.xx&oh=00_AT8Xv57NL0IhoVLuj8ndMepoetfBdz1Urary8TirnaeN4w&oe=63664983" width="80%">
                     </div>
                 </div>
             </div>
@@ -282,6 +282,7 @@
 </div> <!-- end of /.main-content -->
 
 
+
             <footer>
                 <div class="container">
                     <div class="row">
@@ -294,7 +295,7 @@
                                 <div class="col-md-6 col-sm-6 col-xs-6">
                                     <li><a href="https://www.egr.msu.edu/wie/" title="Michigan State University Women in Engineering WIE" target="_blank">MSU WIE</a></li>
                                     <li><a href="https://www.cse.msu.edu" title="Michigan State University Department of Computer Science &amp; Engineering" target="_blank">MSU CSE</a></li>
-                                    <!-- <li><a href="https://www.ford.com/" title="The Ford Motor Company">Ford</a></li>
+                                   <!-- <li><a href="https://www.ford.com/" title="The Ford Motor Company">Ford</a></li> -->
                                     <li><a href="https://www.cadl.org" title="Capital Area District Libraries">CADL</a></li>
                                 </div>
                             </ul>
@@ -334,6 +335,7 @@
                     </div> <!-- /.row -->
                 </div> <!-- /.container -->
             </footer>
+
 
 
             <!-- footer-navigation start -->
@@ -382,25 +384,31 @@
             </nav>
             <!-- footer-navigation end -->
 
-        </div> <!--  end of #contact-page  -->
+        </div>
+        <!-- end of /news-page -->
 
 
         <!--  Necessary scripts  -->
-
         <script type="text/javascript" src="assets/js/jquery-2.1.3.min.js"></script>
         <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="assets/js/owl.carousel.js"></script>
 
 
-        <!-- script for testimonial -->
+        <!-- script for sponsor using owl carousel -->
+
         <script type="text/javascript">
             $(document).ready(function() {
 
-                $("#client-speech").owlCarousel({
+                $("#sponsor-list").owlCarousel({
 
-                    autoPlay: 5000, //Set AutoPlay to 3 seconds
+                    autoPlay: 3000, //Set AutoPlay to 3 seconds
                     stopOnHover: true,
-                    singleItem:true
+                    items : 4,
+                    itemsDesktop: [1200,4],
+                    itemsDesktopSmall: [991,3],
+                    itemsTablet: [767,2],
+                    itemsTabletSmall: [625,2],
+                    itemsMobile: [479,1]
                 });
 
             });
