--- a/technovation/Fall2022/news.html
+++ b/technovation/Fall2022/news.html
@@ -276,11 +276,11 @@
                     <div class="col-md-12" align="middle">
                         <iframe width="728" height="548" src="https://www.youtube.com/embed/rf8FX2sI3gU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
-                </div>
+                </div> <!-- end row -->
                 <br>
                 <div class="row">
                     <p><i>Bringing a growth mindset to Technovation each week is key! Ask your student what a growth mindset means to them, and how they can apply it elsewhere in their life.</i></p>
-                </div>
+                </div> <!-- end row -->
             </div>
             <p>
                 Next, we jumped into our coding lesson for the week. 
@@ -293,11 +293,11 @@
                     <div class="col-md-6" align="middle">
                         <img class="shadow-lg" src="assets/img/week2/technoday202.png" width=90%>
                     </div>
-                </div>
+                </div> <!-- end row -->
                 <br>
                 <div class="row">
                     <p><i>Once students learned how to tell Tracy to change colors, they were able to change the color of the trail Tracy leaves. </i></p>
-                </div>
+                </div> <!-- end row -->
             </div>
             <p>
                 After students learned how to change the color of Tracy's pen with the color command, students learned how to fill in the shapes they had drawn with the begin_fill and end_fill commands. Students also learned how to increase the thickness of trail Tracy leaves with the pensize command.
@@ -310,11 +310,11 @@
                     <div class="col-md-6" align="middle">
                         <img class="shadow-lg" src="assets/img/week2/technoday204.png" width=90%>
                     </div>
-                </div>
+                </div> <!-- end row -->
                 <br>
                 <div class="row">
                     <p><i>Students learned how to tell Tracy to increase the pensize and fill in shapes, they were able to keep track of the thickness of the shapes and trails they made!</i></p>
-                </div>
+                </div> <!-- end row -->
             </div>
             <p>
                 Finally, we learned how to use the setposition and speed commands to fine-tune Tracy's behavior: setposition allows Tracy to move to specific positions on the screen, while speed allows Tracy to move faster or slower! Ask your student to show you these commands in action&mdash;they're pretty cool!
@@ -327,11 +327,11 @@
                     <div class="col-md-6" align="middle">
                         <img class="shadow-lg" src="assets/img/week2/technoday206.png" width=90%>
                     </div>
-                </div>
+                </div> <!-- end row -->
                 <br>
                 <div class="row">
                     <p><i>With the setposition command, Tracy's only a hop, skip, and a jump away from anywhere on the screen... and with the speed command, she can get there in a flash!</i></p>
-                </div>
+                </div> <!-- end row -->
             </div>
             <p>
                 As usual, students concluded Saturday's meeting with a brief reflection and discussion around what went well, what didn't go so well, and what excites them about the week ahead. We hope they're as excited as we are for Week 3!
@@ -364,7 +364,7 @@
                         <br><br>
                         <p><i>Ishita Kokil (Lead White Cohort Michigan Mentor)</i></p>
                     </div>
-                </div>
+                </div> <!-- end row -->
                 <div class="row">
                     <div class="col-md-4" align="left"> <!-- Sophia -->
                         <p>
@@ -383,7 +383,7 @@
                         <p>
                             <b>What advice do you have for our students?</b><br>
                             Take advantage of as many opportunities ad you can - they can lead you to great places!                         </p>
-                    </div>
+                    </div> <!-- Sophia -->
                     <div class="col-md-4" align="left"> <!-- Jasmine -->
                         <p>
                             <b>What are you studying?</b><br>
@@ -401,7 +401,7 @@
                         <p>
                             <b>What advice do you have for our students?</b><br>
                             Even when life gets hard get up and keep going                        </p>
-                    </div>
+                    </div>  <!-- Jasmine -->
                     <div class="col-md-4" align="left"> <!-- Ishita -->
                         <p>
                             <b>What are you studying?</b><br>
@@ -418,7 +418,7 @@
                         <p>
                             <b>What advice do you have for our students?</b><br>
                             Code can look intimidating sometimes but trust me, it is way easier than it looks!                        </p>
-                    </div>
+                    </div> <!-- Ishita -->
                 </div><br>
             </div>
             <p>
@@ -427,8 +427,6 @@
             <p>
                 -The Technovation Team
             </p>
-        </div>
-
         </div>
     </section> <!-- end Week 2 section -->
 
@@ -686,10 +684,7 @@
                 -The Technovation Team
             </p>
         </div>
-
-        </div>
     </section> <!-- end Week 1 section -->
-
 
     <section class="bg-light-gray">  <!-- begin Fall 2022 section -->
         <div class="container">
