--- a/technovation/Fall2022/current.html
+++ b/technovation/Fall2022/current.html
@@ -26,7 +26,7 @@
     </head>
 
     <body id="about">
-        <div id="current-club-page">
+        <div id="clubs-page">
 
 
           <!-- site-navigation start -->
